--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,9 @@
       android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name="MemoryGame"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="landscape"
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
